--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,9 @@ references:
   android_dependencies: &android_dependencies
     run:
       name: Download Android Dependencies
-      command: ./gradlew androidDependencies
+      command:
+        sudo chmod +x gradlew
+        ./gradlew androidDependencies
 
   gradle_key: &gradle_key
     jars-{{ checksum "gradle/wrapper/gradle-wrapper.properties" }}-{{ checksum "build.gradle" }}-{{ checksum "app/build.gradle" }}
