--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,7 @@ references:
   workspace: &workspace
     ~/src
 
+  ## Docker image
   android_config: &android_config
     working_directory: *workspace
     docker:
@@ -14,18 +15,7 @@ references:
       _JAVA_OPTIONS: "-Xmx2048m -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap"
       GRADLE_OPTS: '-Dorg.gradle.jvmargs="-Xmx2048m"'
 
-  ruby_dependencies: &ruby_dependencies
-    run:
-      name: Download Ruby Dependencies
-      command: bundle check || bundle install --path vendor/bundle
-
-  android_dependencies: &android_dependencies
-    run:
-      name: Download Android Dependencies
-      command:
-        sudo chmod +x gradlew
-        ./gradlew androidDependencies
-
+  ## Cache
   gradle_key: &gradle_key
     jars-{{ checksum "gradle/wrapper/gradle-wrapper.properties" }}-{{ checksum "build.gradle" }}-{{ checksum "app/build.gradle" }}
 
@@ -52,6 +42,19 @@ references:
       key: *gems_key
       paths:
         - vendor/bundle
+
+
+  ruby_dependencies: &ruby_dependencies
+    run:
+      name: Download Ruby Dependencies
+      command: bundle check || bundle install --path vendor/bundle
+
+  android_dependencies: &android_dependencies
+    run:
+      name: Download Android Dependencies
+      command:
+        sudo chmod +x gradlew
+        ./gradlew androidDependencies
 
 jobs:
   test_unit:
