--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,16 +44,22 @@ references:
         - vendor/bundle
 
 
+  ## Dependencies
+
   ruby_dependencies: &ruby_dependencies
     run:
       name: Download Ruby Dependencies
       command: bundle check || bundle install --path vendor/bundle
 
+  chmod_permissions: &chmod_permissions
+    run:
+      name: Change Gradle Permissions
+      command: sudo chmod +x ./gradlew
+
   android_dependencies: &android_dependencies
     run:
       name: Download Android Dependencies
       command:
-        sudo chmod +x gradlew
         ./gradlew androidDependencies
 
 jobs:
