Is this the real life?

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,6 +70,7 @@ jobs:
       - *restore_gradle_cache
       - *restore_gems_cache
       - *ruby_dependencies
+      - *chmod_permissions
       - *android_dependencies
       - *save_gradle_cache
       - *save_gems_cache
