--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -76,7 +76,7 @@ jobs:
       - *save_gems_cache
       - run:
           name: Run unit tests
-          command: blunde exec fastlane unit_tests
+          command: bundle exec fastlane unit_tests
       - store_artifacts:
           path: app/build/reports/
           destination: /reports/
