--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,16 +51,28 @@ references:
       name: Download Ruby Dependencies
       command: bundle check || bundle install --path vendor/bundle
 
-  chmod_permissions: &chmod_permissions
-    run:
-      name: Change Gradle Permissions
-      command: sudo chmod +x ./gradlew
-
   android_dependencies: &android_dependencies
     run:
       name: Download Android Dependencies
       command:
         ./gradlew androidDependencies
+
+  ## Other Stuff
+
+  chmod_permissions: &chmod_permissions
+    run:
+      name: Change Gradle Permissions
+      command: sudo chmod +x ./gradlew
+
+  decode_android_key: &decode_android_key
+    run:
+      name: Decode Android key store
+      command: echo $KEYSTORE | base64 -di | tee keystore.jks app/keystore.jks >/dev/null
+
+  create_google_play_key: &create_google_play_key
+    run:
+      name: Create Google Play key
+      command: echo $GOOGLE_PLAY_KEY > google-play-key.json
 
 jobs:
   test_unit:
@@ -83,9 +95,35 @@ jobs:
       - store_test_results:
           path: app/build/test-results/
           destination: /test-results/
+  deploy_play_store:
+    <<: *android_config
+    steps:
+      - checkout
+      - *restore_gradle_cache
+      - *restore_gems_cache
+      - *ruby_dependencies
+      - *chmod_permissions
+      - *android_dependencies
+      - *save_gradle_cache
+      - *save_gems_cache
+      - *decode_android_key
+      - *create_google_play_key
+      - run:
+        name: Deploy to Play Store
+        command: bundle exec fastlane deploy_to_play_store
+      - store_artifacts:
+        path: app/build/outputs/apk/
+        destination: /apk/
+      - store_artifacts:
+        path: app/build/outputs/mapping/
+        destination: /mapping/
+
 
 workflows:
   version: 2
   workflow:
     jobs:
       - test_unit
+      - deploy_play_store:
+        requires:
+          - test_unit
